--- a/sistemaparqueo/views/viewLogIn.html
+++ b/sistemaparqueo/views/viewLogIn.html
@@ -6,8 +6,9 @@
     <title>Inicio de Sesion</title>
 
     <link rel="stylesheet" href="../static/styles/styleLogIn.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+
 </head>
 <body>
 
@@ -15,7 +16,7 @@
         <div class="col-sm-24 seccionPrincipal">
             <div class="modal-content text-center" >
 
-                <form method="post">
+                <form>
                 {% csrf_token %}
                     <div class="barra-principal">
                         <div class="container">
@@ -24,7 +25,7 @@
                                     <h1 class="text-log-in">INICIO DE SESION</h1>
                                 </div>
                                 <div class="col-5 text-right">
-                                    <select required="" name="user_type" class="custom-select border border-secondary select-usuario" id="inputGroupSelect01">
+                                    <select required="" id="user_type" name="user_type" class="custom-select border border-secondary select-usuario">
                                         <option value="" selected disabled>--SELECCIONE UN USUARIO--</option>
                                     {%  for tipo_usuario in tipo_usuarios %}
                                         <option value="{{ tipo_usuario.id_tipo_usuario }}">{{ tipo_usuario.tipo }}</option>
@@ -51,7 +52,7 @@
                                             <i class="fas fa-user"></i>
                                         </span>
                                         </div>
-                                        <input required type="text" name="user_name" class="form-control border border-dark" placeholder="Ingrese su nombre de usuario" aria-label="Username" aria-describedby="basic-addon1">
+                                        <input required type="text" id="user_name" name="user_name" class="form-control border border-dark" placeholder="Ingrese su nombre de usuario" aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                             </div>
@@ -63,14 +64,14 @@
                                             <i class="fas fa-key"></i>
                                         </span>
                                         </div>
-                                        <input required type="password" name="password" class="form-control border border-dark" placeholder="Ingrese su contraseña" aria-label="Username" aria-describedby="basic-addon1">
+                                        <input required type="password" id="password" name="password" class="form-control border border-dark" placeholder="Ingrese su contraseña" aria-label="Username" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col input-log-in">
                                     <!--onclick="definirValores()" -->
-                                    <button type="submit" class="btn " id="botonIngresar"><i class="fas fa-sign-in-alt"></i>  INGRESAR </button>
+                                    <button type="button" onclick="validarUsuario('{% url 'validarLogIn' %}')" class="btn " id="botonIngresar"><i class="fas fa-sign-in-alt"></i>  INGRESAR </button>
                                 </div>
                             </div>
                         </div>
@@ -80,15 +81,19 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-    <script type="text/javascript" src="../static/scripts/scriptLogIn.js">
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <script type="text/javascript">
+        var cont = 0
+        var rutaMenuAdmin = "/menuPrincipal/"
+        var rutaMenuEmpleado = "/menuEmpleado/"
+    </script>
+    <script src="../static/scripts/scriptLogIn.js">
     </script>
 
 </body>
