--- a/sistemaparqueo/views/viewEstadoPagos/contentEstadoPagos.html
+++ b/sistemaparqueo/views/viewEstadoPagos/contentEstadoPagos.html
@@ -25,7 +25,7 @@
                                         <label class="p font-weight-bold">Usuario:</label>
                                         <label class="p">{{ usuario.nombre }}</label>
                                     </div>
-                                    <button type="submit" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
+                                    <button onclick="cerrarCesion('{% url 'verificar_cierre_caja' %}', '{% url 'index' %}')" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
                                 </div>
                             </div>
                         </div>
@@ -123,6 +123,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <script src="{% static 'scripts/scriptEstadoPagos.js' %}"></script>
+
+        <script src="{% static 'scripts/scriptMenuEmpleado.js' %}"></script>
 
         <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
             <div class="modal-dialog" role="document">
