--- a/sistemaparqueo/views/viewGestionDeTarifas/contentGestionDeTarifas.html
+++ b/sistemaparqueo/views/viewGestionDeTarifas/contentGestionDeTarifas.html
@@ -30,7 +30,7 @@
                                     <label class="p font-weight-bold">Usuario:</label>
                                     <label class="p">{{ usuario.nombre}}</label>
                                 </div>
-                                <button type="submit" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
+                                <button onclick="cerrarCesion('{% url 'index' %}')" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
                             </div>
                         </div>
                     </div>
@@ -298,6 +298,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script src="{% static 'scripts/scriptGestionDeTarifas.js' %}">
+    </script>
+    <script src="{% static 'scripts/scriptMenuPrincipal.js' %}">
     </script>
 
 </body>
