--- a/sistemaparqueo/views/viewIngresoVehiculos/viewIngresoVehiculo.html
+++ b/sistemaparqueo/views/viewIngresoVehiculos/viewIngresoVehiculo.html
@@ -24,7 +24,7 @@
                                     <label class="p font-weight-bold">Usuario:</label>
                                     <label class="p">{{ usuario.nombre }}</label>
                                 </div>
-                                <button type="submit" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
+                                <button onclick="cerrarCesion('{% url 'verificar_cierre_caja' %}', '{% url 'index' %}')" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
                             </div>
                         </div>
                     </div>
@@ -156,5 +156,6 @@
     <script src="{% static 'scripts/scriptIngresoVehiculos.js' %}">
 
     </script>
+    <script src="{% static 'scripts/scriptMenuEmpleado.js' %}"></script>
 </body>
 </html>
