--- a/sistemaparqueo/views/viewReporteAlquileres/contentReporteDeAlquileres.html
+++ b/sistemaparqueo/views/viewReporteAlquileres/contentReporteDeAlquileres.html
@@ -29,7 +29,7 @@
                                     <label class="p font-weight-bold">Usuario:</label>
                                     <label class="p">{{ usuario.nombre }}</label>
                                 </div>
-                                <button type="submit" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
+                                <button onclick="cerrarCesion('{% url 'index' %}')" class="btn btn-primary " id="botonCerrarSesion"><i class="fas fa-sign-in-alt"></i>CERRAR SESION</button>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,9 @@
     <script type="text/javascript">var rutaModal='/menuPrincipal/reporteAlquileres/';</script>
 
     <script src="{% static 'scripts/scriptReporteDeAlquileres.js' %}">
+    </script>
 
+    <script src="{% static 'scripts/scriptMenuPrincipal.js' %}">
     </script>
 
 
